# Test-task-Junior-Backend

test_task/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
test_task/config/: settings.py  urls.py
test_task/posts/: exception_handler.py  models.py  pagination.py  tests.py  urls.py  views.py
test_task/posts/clients/: InstagramClient.py  __init__.py
test_task/posts/migrations/: 0001_initial.py  0002_comment.py
test_task/posts/repository/: PostRepository.py  __init__.py
test_task/posts/serializers/: __init__.py  comment.py  post.py
test_task/posts/service/: PostService.py  __init__.py
